[package]
name = "alkahest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.19"
env_logger = "0.10.0"
glfw = "*"
gl = "*"
ultraviolet = "*"
rand = "*"
chrono = "*"
flume = "*"
modular-bitfield = "*"
serde = "*"
serde_derive = "*"
toml = "*"
string-interner = "*"
image = "*"

[features]
wayland = ["glfw/wayland"]
