[package]
name = "alkahest"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ctrlc = "3.4.0"
log = "0.4.19"
env_logger = "0.10.0"
lazy_static = "1.4.0"
glfw = "*"
gl = "*"
ultraviolet = "*"
rand = "*"
chrono = "*"
flume = "0.10.14"
modular-bitfield = "*"
serde = "*"
serde_derive = "*"
toml = "*"
string-interner = "*"
image = "*"

[features]
wayland = ["glfw/wayland"]
profiling = []
